@@ -29,6 +29,17 @@ ASA R2 시스템을 위한 ONTAP 9.16.1에서 사용할 수 있는 새로운 기
 |===
 
 
+== 프로토콜 지원
+
+[cols="2,4"]
+|===
+| 업데이트 | 설명 
+
+
+| link:../get-started/learn-about.html["대칭 액티브/액티브 다중 경로에 대한 NVMe 지원"] | NVMe/FC 및 NVMe/TCP는 이제 다중 경로를 위한 대칭 액티브-액티브 아키텍처를 지원하므로 호스트와 스토리지 간의 모든 경로가 액티브/최적화됩니다. 
+|===
+
+
 == 스토리지 효율성
 
 [cols="2,4"]
